first action fixed

--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -7,4 +7,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: print hello sms
-            - run: echo "Hello Pratik"
+              run: echo "Hello Pratik"
